# asiofi

./: .clang-format  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md
cmake/: AsiofiConfig.cmake.in  AsiofiInit.cmake  AsiofiLib.cmake  FairCMakeModules.cmake  FindOFI.cmake  asiofiBuildOption.cmake  asiofiBundlePackageHelper.cmake  asiofiConfig.cmake.in  asiofiLib.cmake  asiofiPackage.cmake  asiofiProjectSettings.cmake  asiofiSummary.cmake
fabtests/: CMakeLists.txt
fabtests/benchmarks/: malloc_bw.cpp  msg_bw.cpp  shmalloc_bw.cpp
include/: asiofi.hpp
include/asiofi/: address_vector.hpp  completion_queue.hpp  connected_endpoint.hpp  domain.hpp  endpoint.hpp  errno.hpp  event_queue.hpp  fabric.hpp  info.hpp  memory_region.hpp  memory_resources.hpp  passive_endpoint.hpp  priority_scheduler.hpp  semaphore.hpp  unconnected_endpoint.hpp  version.hpp.in  waitset.hpp
include/asiofi/detail/: function2.hpp  get_native_wait_fd.hpp  handler_queue.hpp  utility.hpp
test/: CMakeLists.txt
test/benchmarks/: malloc_bw.cpp  msg_bw.cpp
